Added conditional verifier to repalce and expand on conditional_mandatory verifier

--- a/language/translate.yaml
+++ b/language/translate.yaml
@@ -27,3 +27,12 @@ default:
     threerd_party: "3rd Party"
     SaaS: "SaaS"
     internal_service: "Internal Service"
+
+    # Verification meaningful values
+    na: 
+      - "na"     # Not Applicable
+      - "n/a"
+      - "n.a."
+      - "n.a"
+      - "Not Applicable"
+    none: "None"
