--- a/language/translate.yaml
+++ b/language/translate.yaml
@@ -1,4 +1,4 @@
----
+¬---
 default:
   translate:
     # This file should not contain any templated values, as it will be used to provide values to the other templated files
@@ -36,3 +36,4 @@ default:
       - "n.a"
       - "Not Applicable"
     none: "None"
+    in_memory: "In-memory"
